Fix front page hero styling on mobile

--- a/src/pages/index.module.css
+++ b/src/pages/index.module.css
@@ -40,6 +40,12 @@
   }
 
   .buttons {
-    justify-content: center;
+    flex-direction: column;
+  }
+}
+
+@media (max-width: 576px) {
+  .buttons {
+    align-items: normal;
   }
 }
